--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "MyApp",
-    "name": "My React Application",
+    "short_name": "Erp",
+    "name": "Erp",
     "icons": [
         {
             "src": "favicon.ico",
