--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,12 @@
 {
-  "short_name": "Erp",
-  "name": "Erp",
+  "short_name": "ERP",
+  "name": "ERP Management",
   "icons": [
     {
       "src": "logonav.png",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/png"
-    },
-    {
-      "src": "logo192.png",
+      "sizes": "1024x1024",
       "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logonav.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "purpose": "any"
     }
   ],
   "start_url": ".",
